Fix line spacing and padding for user profile window

--- a/src/main/resources/view/UserProfileWindow.css
+++ b/src/main/resources/view/UserProfileWindow.css
@@ -4,4 +4,5 @@
 
 #userDetails {
     -fx-text-fill: white;
+    -fx-label-line-spacing: 10;
 }
